--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,6 @@ body {
 .header-conteiner {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 
 .heder-nav {
@@ -92,14 +91,14 @@ margin-right: 50px;
   font-size: 26px;
   line-height: 1.19; /* identical to box height */
   letter-spacing: 0.03em;
-
-  margin-right: 93px;
+  
 }
 
 .color-logo {
   color: var(--accent-color);
   display: flex;
   align-items: center;
+  margin-right: 93px;
 }
 
 .heder-logo {
@@ -206,7 +205,7 @@ a.heder-portfolio {
 }
 
 .benefits-item {
-  width: ((100% - 60px) / 3 );
+  width: 270px;
 }
 
 .img {
@@ -322,6 +321,11 @@ a.heder-portfolio {
   padding-bottom: 60px;
 }
 
+.address {
+  margin-top: 20px;
+}
+
+
 .footer-logo {
   color: #ffffff;
 }
@@ -341,13 +345,21 @@ a.heder-portfolio {
   color: var(--accent-color);
 }
 
+.footer-item {
+  margin-bottom: 9px;
+}
+
+.footer-item:last-child {
+  margin-bottom: 0px;
+}
+
+
+
 .footer-address {
   font-size: 14px;
   line-height: 1.71; /* or 171% */
   letter-spacing: 0.03em;
   color: var(--main-light-color);
-  margin-top: 20px;
-  margin-bottom: 9px;
 }
 
 .footer-email {
@@ -417,7 +429,6 @@ a.heder-portfolio {
   padding: 20px 24px;
   border-top: transparent;
   border: 1px solid #eeeeee;
-  max-width: 370px;
 }
 
 .portfolio-title {
@@ -425,6 +436,8 @@ a.heder-portfolio {
   font-size: 18px;
   line-height: 2; /* identical to box height, or 200% */
   letter-spacing: 0.06em;
+  color: var(--head-color);
+  margin-bottom: 4px;
 }
 
 .portfolio-after-title {
