--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ margin-right: 50px;
   font-size: 26px;
   line-height: 1.19; /* identical to box height */
   letter-spacing: 0.03em;
-  
 }
 
 .color-logo {
@@ -253,7 +252,7 @@ a.heder-portfolio {
 }
 
 .aktiviti-item {
-  width: ((100% - 90px) / 4 );
+  width: calc((100% - 90px) / 4 );
 }
 
 .aktiviti-title {
@@ -325,7 +324,6 @@ a.heder-portfolio {
   margin-top: 20px;
 }
 
-
 .footer-logo {
   color: #ffffff;
 }
@@ -352,8 +350,6 @@ a.heder-portfolio {
 .footer-item:last-child {
   margin-bottom: 0px;
 }
-
-
 
 .footer-address {
   font-size: 14px;
@@ -422,7 +418,7 @@ a.heder-portfolio {
 }
 
 .portfolio-item {
-  width: ((100% - 60px) / 3 );
+  width: calc((100% - 60px) / 3 );
 }
 
 .portfolio-text {
